--- a/index.css
+++ b/index.css
@@ -74,6 +74,9 @@
     height: 27px;
     padding: 3px;
     outline-color: aqua;
+    transition: 1s;
+    box-shadow: 0px 0px 0px red;
+    border: 0px solid red;
   }
   .btnWish{
     border: none;
